--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@metamask/smart-accounts-kit": "^0.3.0",
+    "@rainbow-me/rainbowkit": "^2.2.10",
     "@supabase/supabase-js": "^2.95.1",
     "@tanstack/react-query": "^5.90.20",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "viem": "^2.45.1",
-    "wagmi": "^3.4.2"
+    "wagmi": "^2.19.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
