--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.95.1",
     "@tanstack/react-query": "^5.90.20",
     "next": "16.1.6",
+    "permissionless": "^0.3.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "viem": "^2.45.1",
