--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@supabase/supabase-js": "^2.95.1",
     "@tanstack/react-query": "^5.90.20",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "next": "16.1.6",
     "permissionless": "^0.3.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^3.7.0",
     "viem": "^2.45.1",
     "wagmi": "^2.19.5"
   },
