feat: refactor to ERC-4337 architecture with parallel UserOps
Changes:
- Add bundler client for Pimlico ERC-4337 bundler
- Create backend smart account (MetaMask Hybrid implementation)
- Use parallel nonce keys for concurrent redemptions (no more collisions)
- Phase 1: Sequential approvals (rare, one-time per wallet)
- Phase 2: Parallel swaps via UserOperations
- Add permissionless dependency for encodeNonce
- Smart account auto-deploys on first UserOp via factory

Architecture:
- Backend EOA signs operations
- Backend smart account submits to Pimlico bundler
- Each wallet gets unique nonce key: baseNonceKey + index
- First run deploys smart account automatically

Required env vars:
- PIMLICO_API_KEY: Pimlico bundler API key for Base
- DCA_BACKEND_PRIVATE_KEY: Backend signer private key

Backend smart account: 0xc472e866045d2e9ABd2F2459cE3BDB275b72C7e1

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@metamask/smart-accounts-kit": "^0.3.0",
     "@supabase/supabase-js": "^2.39.0",
+    "permissionless": "^0.3.4",
     "viem": "^2.21.0"
   },
   "devDependencies": {
