--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.95.1",
     "@tanstack/react-query": "^5.90.20",
     "@types/canvas-confetti": "^1.9.0",
+    "@vercel/analytics": "^1.6.1",
     "canvas-confetti": "^1.9.4",
     "next": "16.1.6",
     "permissionless": "^0.3.4",
